[QUARTZ] - Scheduling jobs with Quartz Scheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,51 @@
-spring.application.name=Java-Playground
+## SERVER
+server.port = 8081
+
+## HIBERNATE/JPA/JDBC CONFIG
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.show-sql = false
+
+#spring batch
+#spring.sql.init.platform = postgres
+#spring.batch.jdbc.initialize-schema = always
+
+## DATASOURCE CONFIG
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/simple_job
+spring.datasource.username = postgres
+spring.datasource.password = admin
+
+## QUARTZ CONFIG (can be defined in separate properties file)
+# configure store type and when should be sql schema initialized
+spring.quartz.job-store-type = jdbc
+#spring.quartz.jdbc.initialize-schema = always
+
+# configure main scheduler
+spring.quartz.properties.org.quartz.scheduler.instanceName = JobScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId = AUTO
+
+# configure thread pool
+spring.quartz.properties.org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.orq.quartz.threadPool.threadCount = 10
+#spring.quartz.properties.orq.quartz.threadPool.threadPriority = 5
+
+# configure job store
+spring.quartz.properties.org.quartz.jobStore.misfireThreshold = 1000
+spring.quartz.properties.org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+spring.quartz.properties.org.quartz.jobStore.dataSource = schedulerDS
+spring.quartz.properties.org.quartz.jobStore.userProperties = true
+
+# configure cluster properties
+spring.quartz.properties.org.quartz.jobStore.isClustered = true
+spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval = 1000
+
+# configure data source
+spring.quartz.properties.org.quartz.dataSource.schedulerDS.provider = hikaricp
+spring.quartz.properties.org.quartz.dataSource.schedulerDS.driver = org.postgresql.Driver
+spring.quartz.properties.org.quartz.dataSource.schedulerDS.URL = jdbc:postgresql://localhost:5432/job_manager
+spring.quartz.properties.org.quartz.dataSource.schedulerDS.user = postgres
+spring.quartz.properties.org.quartz.dataSource.schedulerDS.password = admin
+spring.quartz.properties.org.quartz.dataSource.schedulerDS.connections = 30
